prod_snapshot_2015-09-24_1030/objects/SSRS_Emails_del__c.object
<CustomObject>
    <fields>
        <fullName>Click_Count__c</fullName>
        <label>Click Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Click_Through_Rate__c</fullName>
        <label>Click Through Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Daily_Send_Name__c</fullName>
        <label>Daily Send Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_Count__c</fullName>
        <label>Delivered Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filler_or_Local_Deal__c</fullName>
        <label>Filler or Local Deal</label>
        <picklist>
            <picklistValues>
                <fullName>Filler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>SSRS Emails</relationshipLabel>
        <relationshipName>SSRS_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Open_Rate__c</fullName>
        <label>Open Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SSRS_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_ID__c</fullName>
        <label>Send ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_Count__c</fullName>
        <label>Sent Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unsubscribed_Count__c</fullName>
        <label>Unsubscribed Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Count__c</fullName>
        <label>View Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SSRS Emails</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Daily_Send_Name__c</columns>
        <columns>Market__c</columns>
        <columns>Open_Rate__c</columns>
        <columns>Click_Through_Rate__c</columns>
        <columns>Delivered_Count__c</columns>
        <columns>Delivered_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SSRS-{00000000}</displayFormat>
        <label>SSRS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSRS Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>